Fix broken styles with other languages

--- a/src/app/home/pages/home/home.component.scss
+++ b/src/app/home/pages/home/home.component.scss
@@ -82,7 +82,7 @@
   .mat-display-1 {
     margin-bottom: 20px;
   }
-  background-image: url('/assets/vectors/orcid.logo.background.svg');
+  background-image: url('../../../../assets/vectors/orcid.logo.background.svg');
   box-sizing: border-box;
   height: 450px;
   padding: 50px 0;
