--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -52,7 +52,7 @@ ul {
 }
 
 .links {
-  > div {
+  > ul {
     justify-content: space-around;
     > :first-child {
       padding-left: 0;
